# LocalRoute

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
localroute/: dataset.py  features.py  getCourseInfo.py
notebooks/: 0.01-jk-scraping-exploration.ipynb  1.01-jk-database-exploration.ipynb  1.01-jk-interim-exploration.ipynb  2.01-jk-visualizations.ipynb  database-exploration.ipynb  scrapingExploration.ipynb
src/: \  dataset.py  features.py  getCourseInfo.py  getCourseInfo.py.bak  makeCourseUrlList.py  makeDataset.py
